<resources>
    <string name="app_name">DDC</string>
    <string name="good_morning">Good morning!</string>
    <string name="enter_id_exp">Can we have your number?</string>
    <string name="enter_phone">Phone</string>
    <string name="enter_password">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="sign_in">Come here often? lets open an account!</string>
    <string name="enter_your_password">Can you tell us your secret password?</string>

    <string name="menu_friends_parcels">Friends Parcels</string>
    <string name="menu_my_parcels">My Parcels</string>
    <string name="menu_find_friends">Find Friends</string>
    <string name="menu_parcel_history">Parcel History</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_send">Send</string>
    <string name="welcome">Welcome!</string>
    <string name="create_acount">Create a new acount</string>
    <string name="new_acount_ex">Let\'s learn about you. Should we?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="home_number">Home number</string>
    <string name="where_you_live">We need to know whrer you live. It\'s importent for the delivery of your parcels.</string>
    <string name="worng_phone_number">Incorrect phone number</string>
    <string name="worng_first_name">The first name is too short...</string>
    <string name="worng_last_name">The last name is too short...</string>
    <string name="worng_city">Your city dont exist!</string>
    <string name="worng_street">The street name is too short...</string>
    <string name="worng_home_number">Are you sure this is your home number?</string>
    <string name="general_error">Error. Could you try agian later?</string>
    <string name="got_it">Got it</string>
    <string name="new_member">Congratulations! you now officeily member in the app. You can start your activity in the app right now!</string>
    <string name="friends_parcels">Friends parcels</string>
    <string name="my_parcels">My parcels</string>
    <string name="waiting_for_sms">Waiting for the code SMS...</string>
    <string name="add_friends">Add friends</string>
    <string name="system">System</string>
    <string name="logout">Log out</string>
    <string name="looking_for_code">Looking for QR code...</string>
    <string name="aim_the_camera">Aim the camera to the parcel no.</string>
</resources>
