<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends_parcels"
            android:icon="@drawable/ic_friend"
            android:title="@string/friends_parcels" />
        <item
            android:id="@+id/nav_my_parcels"
            android:icon="@drawable/ic_parcel"
            android:title="@string/my_parcels" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_friends"
            android:title="@string/add_friends" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_log_out"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
