<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".UI.SignUpScreen.SignUpScreen">

    <TextView
        android:layout_margin="30dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/welcome"
        android:textColor="#EEFFFFFF"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <TextView
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center|top"
        android:text="@string/create_acount"
        android:textColor="#EEFFFFFF"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:layout_margin="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center|top"
                    android:text="@string/new_acount_ex" />

                <EditText
                    android:id="@+id/phone_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="phone"
                    android:hint="@string/enter_phone"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textDirection="ltr"
                    android:layout_margin="7dp"/>

                <EditText
                    android:id="@+id/first_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/first_name"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_margin="7dp"/>

                <EditText
                    android:id="@+id/last_name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/last_name"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_margin="7dp"/>



                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center|top"
                    android:gravity="center"
                    android:text="@string/where_you_live" />

                <AutoCompleteTextView
                    android:id="@+id/city_ac"
                    style="@style/edittext_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:hint="@string/city"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_margin="7dp"/>

                <EditText
                    android:id="@+id/street_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:hint="@string/street"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_margin="7dp"/>

                <EditText
                    android:id="@+id/home_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/home_number"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_margin="7dp"/>

                <ProgressBar
                    android:id="@+id/signup_pb"
                    android:layout_margin="15dp"
                    android:visibility="gone"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/signup_fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    app:srcCompat="@drawable/ic_check_black_24dp" />

            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>